chimera/parser.py
"""Parser for ChimeraLang.

Consumes a token stream and produces an AST.
"""

from __future__ import annotations

from chimera.ast_nodes import (
    AllowConstraint,
    AssertStmt,
    BeliefDecl,
    BinaryOp,
    BoolLiteral,
    CallExpr,
    CompareChain,
    CausalModelDecl,
    ConstitutedType,
    ConstitutionDecl,
    Constraint,
    Declaration,
    EmitStmt,
    EvolveConfig,
    EvolveStmt,
    Expr,
    ExprStmt,
    FederatedTrainStmt,
    FloatLiteral,
    FnDecl,
    ForbiddenConstraint,
    ForStmt,
    ForwardFn,
    GateDecl,
    GoalDecl,
    GradType,
    GuardStmt,
    Identifier,
    IfExpr,
    ImportStmt,
    InquireExpr,
    IntLiteral,
    LayerDecl,
    ListLiteral,
    LossConfig,
    MatchArm,
    MatchExpr,
    MemPtrType,
    MemberExpr,
    MemoryType,
    MetaTrainStmt,
    ModelDecl,
    MoEBlock,
    MustConstraint,
    NamedType,
    OptimizerConfig,
    Param,
    PredictiveCodingDecl,
    PrimitiveType,
    ProbabilisticType,
    Program,
    ReasonDecl,
    ResolveStmt,
    RetrievalDecl,
    ReturnStmt,
    ReplayBufferDecl,
    RewardSystemDecl,
    SelfImproveDecl,
    Statement,
    StringLiteral,
    SwarmDecl,
    SymbolDecl,
    SpikeTrainType,
    TensorType,
    TrainStmt,
    TypeExpr,
    UnaryOp,
    ValDecl,
    VectorStoreType,
    GenericType,
    MultimodalType,
)
from chimera.tokens import Token, TokenKind


class ParseError(Exception):
    def __init__(self, message: str, token: Token) -> None:
        self.token = token
        loc = f"L{token.span.line}:{token.span.col}"
        super().__init__(f"ParseError at {loc}: {message} (got {token.kind.name} {token.value!r})")


class Parser:
    def __init__(self, tokens: list[Token]) -> None:
        self._tokens = tokens
        self._pos = 0

    # ------------------------------------------------------------------
    # Public
    # ------------------------------------------------------------------

    def parse(self) -> Program:
        decls: list[Declaration | Statement] = []
        self._skip_newlines()
        while not self._check(TokenKind.EOF):
            decls.append(self._parse_top_level())
            self._skip_newlines()
        return Program(declarations=decls, span=None)

    # ------------------------------------------------------------------
    # Token helpers
    # ------------------------------------------------------------------

    def _current(self) -> Token:
        return self._tokens[self._pos]

    def _peek_kind(self, offset: int = 0) -> TokenKind:
        idx = self._pos + offset
        if idx < len(self._tokens):
            return self._tokens[idx].kind
        return TokenKind.EOF

    def _check(self, kind: TokenKind) -> bool:
        return self._current().kind == kind

    def _match(self, *kinds: TokenKind) -> Token | None:
        if self._current().kind in kinds:
            return self._advance()
        return None

    def _expect(self, kind: TokenKind, msg: str = "") -> Token:
        if self._current().kind == kind:
            return self._advance()
        raise ParseError(msg or f"Expected {kind.name}", self._current())

    def _advance(self) -> Token:
        tok = self._tokens[self._pos]
        self._pos += 1
        return tok

    def _skip_newlines(self) -> None:
        while self._check(TokenKind.NEWLINE):
            self._advance()

    def _expect_line_end(self) -> None:
        if not self._check(TokenKind.NEWLINE) and not self._check(TokenKind.EOF):
            pass  # lenient — don't error on missing newline
        self._skip_newlines()

    # ------------------------------------------------------------------
    # Top-level
    # ------------------------------------------------------------------

    def _parse_top_level(self) -> Declaration | Statement:
        kind = self._current().kind
        if kind == TokenKind.FN:
            return self._parse_fn()
        if kind == TokenKind.GATE:
            return self._parse_gate()
        if kind == TokenKind.GOAL:
            return self._parse_goal()
        if kind == TokenKind.REASON:
            return self._parse_reason()
        if kind == TokenKind.VAL:
            return self._parse_val()
        if kind == TokenKind.BELIEF:
            return self._parse_belief()
        if kind == TokenKind.RESOLVE:
            return self._parse_resolve()
        if kind == TokenKind.GUARD:
            return self._parse_guard()
        if kind == TokenKind.EVOLVE:
            return self._parse_evolve()
        if kind == TokenKind.SYMBOL:
            return self._parse_symbol_decl()
        if kind == TokenKind.IMPORT:
            return self._parse_import()
        if kind == TokenKind.MODEL:
            return self._parse_model()
        if kind == TokenKind.TRAIN:
            return self._parse_train()
        if kind == TokenKind.CONSTITUTION:
            return self._parse_constitution()
        if kind == TokenKind.IDENT:
            value = self._current().value
            if value == "causal_model":
                return self._parse_named_config_block(CausalModelDecl)
            if value == "federated_train":
                return self._parse_named_config_block(FederatedTrainStmt)
            if value == "meta_train":
                return self._parse_named_config_block(MetaTrainStmt)
            if value == "self_improve":
                return self._parse_named_config_block(SelfImproveDecl)
            if value == "swarm":
                return self._parse_named_config_block(SwarmDecl)
            if value == "replay_buffer":
                return self._parse_named_config_block(ReplayBufferDecl)
            if value == "reward_system":
                return self._parse_named_config_block(RewardSystemDecl)
            if value == "predictive_coding":
                return self._parse_named_config_block(PredictiveCodingDecl)
        return self._parse_statement()

    # ------------------------------------------------------------------
    # Function declaration
    # ------------------------------------------------------------------

    def _parse_fn(self) -> FnDecl:
        span = self._expect(TokenKind.FN).span
        name = self._expect(TokenKind.IDENT, "Expected function name").value
        self._expect(TokenKind.LPAREN, "Expected '(' after function name")
        params = self._parse_param_list()
        self._expect(TokenKind.RPAREN, "Expected ')' after parameters")

        ret_type: TypeExpr | None = None
        if self._match(TokenKind.ARROW):
            ret_type = self._parse_type()

        self._expect_line_end()

        constraints: list[Constraint] = []
        body: list[Statement] = []
        while not self._check(TokenKind.END) and not self._check(TokenKind.EOF):
            self._skip_newlines()
            if self._check(TokenKind.END):
                break
            c = self._try_parse_constraint()
            if c is not None:
                constraints.append(c)
            else:
                body.append(self._parse_statement())
            self._skip_newlines()

        self._expect(TokenKind.END, "Expected 'end' to close function")
        self._expect_line_end()
        return FnDecl(name=name, params=params, return_type=ret_type,
                       constraints=constraints, body=body, span=span)

    # ------------------------------------------------------------------
    # Gate declaration
    # ------------------------------------------------------------------

    def _parse_gate(self) -> GateDecl:
        span = self._expect(TokenKind.GATE).span
        name = self._expect(TokenKind.IDENT, "Expected gate name").value
        self._expect(TokenKind.LPAREN, "Expected '(' after gate name")
        params = self._parse_param_list()
        self._expect(TokenKind.RPAREN, "Expected ')' after parameters")

        ret_type: TypeExpr | None = None
        if self._match(TokenKind.ARROW):
            ret_type = self._parse_type()

        self._expect_line_end()

        branches = 3
        collapse = "majority"
        threshold = 0.85
        fallback = "escalate"
        body: list[Statement] = []

        while not self._check(TokenKind.END) and not self._check(TokenKind.EOF):
            self._skip_newlines()
            if self._check(TokenKind.END):
                break
            if self._check(TokenKind.BRANCHES):
                self._advance()
                self._expect(TokenKind.COLON, "Expected ':' after 'branches'")
                branches = int(self._expect(TokenKind.INT_LIT, "Expected integer").value)
                self._expect_line_end()
            elif self._check(TokenKind.COLLAPSE):
                self._advance()
                self._expect(TokenKind.COLON, "Expected ':' after 'collapse'")
                collapse = self._advance().value
                self._expect_line_end()
            elif self._check(TokenKind.THRESHOLD):
                self._advance()
                self._expect(TokenKind.COLON, "Expected ':' after 'threshold'")
                tok = self._advance()
                threshold = float(tok.value)
                self._expect_line_end()
            elif self._check(TokenKind.FALLBACK):
                self._advance()
                self._expect(TokenKind.COLON, "Expected ':' after 'fallback'")
                fallback = self._advance().value
                self._expect_line_end()
            else:
                body.append(self._parse_statement())
                self._skip_newlines()

        self._expect(TokenKind.END, "Expected 'end' to close gate")
        self._expect_line_end()
        return GateDecl(name=name, params=params, return_type=ret_type,
                         branches=branches, collapse=collapse,
                         threshold=threshold, fallback=fallback,
                         body=body, span=span)

    # ------------------------------------------------------------------
    # Goal declaration
    # ------------------------------------------------------------------

    def _parse_goal(self) -> GoalDecl:
        span = self._expect(TokenKind.GOAL).span
        desc = self._expect(TokenKind.STRING_LIT, "Expected goal description string").value
        self._expect_line_end()

        constraint_list: list[str] = []
        quality_axes: list[str] = []
        explore_budget = 1.0
        body: list[Statement] = []

        while not self._check(TokenKind.END) and not self._check(TokenKind.EOF):
            self._skip_newlines()
            if self._check(TokenKind.END):
                break
            if self._check(TokenKind.CONSTRAINTS):
                self._advance()
                self._expect(TokenKind.COLON)
                constraint_list = self._parse_string_list_block()
            elif self._check(TokenKind.QUALITY):
                self._advance()
                self._expect(TokenKind.COLON)
                quality_axes = self._parse_string_list_block()
            elif self._check(TokenKind.EXPLORE_BUDGET):
                self._advance()
                self._expect(TokenKind.COLON)
                tok = self._advance()
                explore_budget = float(tok.value)
                self._expect_line_end()
            else:
                body.append(self._parse_statement())
                self._skip_newlines()

        self._expect(TokenKind.END, "Expected 'end' to close goal")
        self._expect_line_end()
        return GoalDecl(description=desc, constraints_list=constraint_list,
                         quality_axes=quality_axes, explore_budget=explore_budget,
                         body=body, span=span)

    # ------------------------------------------------------------------
    # Reason declaration
    # ------------------------------------------------------------------

    def _parse_reason(self) -> ReasonDecl:
        span = self._expect(TokenKind.REASON).span
        self._expect(TokenKind.ABOUT, "Expected 'about' after 'reason'")
        self._expect(TokenKind.LPAREN)
        params = self._parse_param_list()
        self._expect(TokenKind.RPAREN)

        ret_type: TypeExpr | None = None
        if self._match(TokenKind.ARROW):
            ret_type = self._parse_type()

        self._expect_line_end()

        given: list[str] = []
        commit_strategy = "highest_consensus"
        body: list[Statement] = []

        while not self._check(TokenKind.END) and not self._check(TokenKind.EOF):
            self._skip_newlines()
            if self._check(TokenKind.END):
                break
            if self._check(TokenKind.GIVEN):
                self._advance()
                self._expect(TokenKind.COLON)
                given = self._parse_string_list_block()
            elif self._check(TokenKind.COMMIT):
                self._advance()
                self._expect(TokenKind.COLON)
                commit_strategy = self._advance().value
                self._expect_line_end()
            else:
                body.append(self._parse_statement())
                self._skip_newlines()

        self._expect(TokenKind.END, "Expected 'end' to close reason block")
        self._expect_line_end()
        return ReasonDecl(name="about", params=params, return_type=ret_type,
                           given=given, commit_strategy=commit_strategy,
                           body=body, span=span)

    # ------------------------------------------------------------------
    # Val declaration
    # ------------------------------------------------------------------

    def _parse_val(self) -> ValDecl:
        self._expect(TokenKind.VAL)
        name = self._expect(TokenKind.IDENT, "Expected variable name").value
        type_ann: TypeExpr | None = None
        if self._match(TokenKind.COLON):
            type_ann = self._parse_type()
        value: Expr | None = None
        if self._match(TokenKind.ASSIGN):
            value = self._parse_expr()
        self._expect_line_end()
        return ValDecl(name=name, type_ann=type_ann, value=value)

    # ------------------------------------------------------------------
    # Statements
    # ------------------------------------------------------------------

    def _parse_statement(self) -> Statement:
        if self._check(TokenKind.VAL):
            return self._parse_val()
        if self._check(TokenKind.RETURN):
            return self._parse_return()
        if self._check(TokenKind.ASSERT):
            return self._parse_assert()
        if self._check(TokenKind.EMIT):
            return self._parse_emit()
        if self._check(TokenKind.IF):
            return ExprStmt(expr=self._parse_if_expr())
        if self._check(TokenKind.FOR):
            return self._parse_for()
        if self._check(TokenKind.MATCH):
            return ExprStmt(expr=self._parse_match_expr())
        if self._check(TokenKind.DETECT):
            return self._parse_detect()
        if self._check(TokenKind.RESOLVE):
            return self._parse_resolve()
        if self._check(TokenKind.GUARD):
            return self._parse_guard()
        if self._check(TokenKind.EVOLVE):
            return self._parse_evolve()
        expr = self._parse_expr()
        self._expect_line_end()
        return ExprStmt(expr=expr)

    def _parse_return(self) -> ReturnStmt:
        self._expect(TokenKind.RETURN)
        value: Expr | None = None
        if not self._check(TokenKind.NEWLINE) and not self._check(TokenKind.EOF) and not self._check(TokenKind.END):
            value = self._parse_expr()
        self._expect_line_end()
        return ReturnStmt(value=value)

    def _parse_assert(self) -> AssertStmt:
        self._expect(TokenKind.ASSERT)
        cond = self._parse_expr()
        self._expect_line_end()
        return AssertStmt(condition=cond)

    def _parse_emit(self) -> EmitStmt:
        self._expect(TokenKind.EMIT)
        value = self._parse_expr()
        self._expect_line_end()
        return EmitStmt(value=value)

    # ------------------------------------------------------------------
    # Constraints
    # ------------------------------------------------------------------

    def _try_parse_constraint(self) -> Constraint | None:
        if self._check(TokenKind.MUST):
            self._advance()
            self._expect(TokenKind.COLON)
            self._skip_newlines()
            expr = self._parse_expr()
            self._expect_line_end()
            return MustConstraint(expr=expr)
        if self._check(TokenKind.ALLOW):
            self._advance()
            self._expect(TokenKind.COLON)
            caps = self._parse_string_list_block()
            return AllowConstraint(capabilities=caps)
        if self._check(TokenKind.FORBIDDEN):
            self._advance()
            self._expect(TokenKind.COLON)
            caps = self._parse_string_list_block()
            return ForbiddenConstraint(capabilities=caps)
        return None

    def _parse_string_list_block(self) -> list[str]:
        """Parse one or more string literals, each on its own line."""
        self._skip_newlines()
        items: list[str] = []
        while self._check(TokenKind.STRING_LIT):
            items.append(self._advance().value)
            self._skip_newlines()
        return items

    # ------------------------------------------------------------------
    # For loop
    # ------------------------------------------------------------------

    def _parse_for(self) -> ForStmt:
        """Parse: for <ident> in <expr> NEWLINE body end"""
        self._expect(TokenKind.FOR)
        target = self._expect(TokenKind.IDENT, "Expected loop variable name").value
        self._expect(TokenKind.IN, "Expected 'in' after loop variable")
        iterable = self._parse_expr()
        self._expect_line_end()
        body: list[Statement] = []
        while not self._check(TokenKind.END) and not self._check(TokenKind.EOF):
            self._skip_newlines()
            if self._check(TokenKind.END):
                break
            body.append(self._parse_statement())
            self._skip_newlines()
        self._expect(TokenKind.END, "Expected 'end' to close for loop")
        self._expect_line_end()
        return ForStmt(target=target, iterable=iterable, body=body)

    # ------------------------------------------------------------------
    # Match expression
    # ------------------------------------------------------------------

    def _parse_match_expr(self) -> MatchExpr:
        """Parse: match <expr> NEWLINE (| <pattern> => body)* end"""
        self._expect(TokenKind.MATCH)
        subject = self._parse_expr()
        self._expect_line_end()
        arms: list[MatchArm] = []
        while not self._check(TokenKind.END) and not self._check(TokenKind.EOF):
            self._skip_newlines()
            if self._check(TokenKind.END):
                break
            self._expect(TokenKind.PIPE, "Expected '|' to start a match arm")
            # Wildcard arm: _
            if self._check(TokenKind.UNDERSCORE):
                self._advance()
                pattern: Expr | None = None
            else:
                pattern = self._parse_expr()
            self._expect(TokenKind.FAT_ARROW, "Expected '=>' after match pattern")
            self._skip_newlines()
            arm_body: list[Statement] = []
            # Arm body: statements until the next '|', 'end', or EOF
            while (
                not self._check(TokenKind.PIPE)
                and not self._check(TokenKind.END)
                and not self._check(TokenKind.EOF)
            ):
                self._skip_newlines()
                if self._check(TokenKind.PIPE) or self._check(TokenKind.END):
                    break
                arm_body.append(self._parse_statement())
                self._skip_newlines()
            arms.append(MatchArm(pattern=pattern, body=arm_body))
        self._expect(TokenKind.END, "Expected 'end' to close match")
        self._expect_line_end()
        return MatchExpr(subject=subject, arms=arms)

    # ------------------------------------------------------------------
    # Detect statement
    # ------------------------------------------------------------------

    def _parse_detect(self) -> ExprStmt:
        """Parse: detect <ident> NEWLINE key: value ... end
        Translates to a call: __detect__(<name>, key=value, ...)"""
        self._expect(TokenKind.DETECT)
        # The thing being detected — typically an identifier like 'hallucination'
        name_tok = self._advance()
        detect_name = name_tok.value
        self._expect_line_end()
        args: list[Expr] = [StringLiteral(value=detect_name)]
        while not self._check(TokenKind.END) and not self._check(TokenKind.EOF):
            self._skip_newlines()
            if self._check(TokenKind.END):
                break
            # key: value pairs
            key_tok = self._advance()
            self._expect(TokenKind.COLON, "Expected ':' in detect block")
            val_expr = self._parse_expr()
            self._expect_line_end()
            args.append(StringLiteral(value=key_tok.value))
            args.append(val_expr)
        self._expect(TokenKind.END, "Expected 'end' to close detect block")
        self._expect_line_end()
        callee = Identifier(name="__detect__")
        return ExprStmt(expr=CallExpr(callee=callee, args=args))

    # ------------------------------------------------------------------
    # CIR / Belief constructs
    # ------------------------------------------------------------------

    def _parse_belief(self) -> BeliefDecl:
        """belief <name> := inquire { prompt: "...", agents: [...], ttl: N }"""
        span = self._expect(TokenKind.BELIEF).span
        name = self._expect(TokenKind.IDENT, "Expected belief name").value
        self._expect(TokenKind.WALRUS, "Expected ':=' after belief name")
        inquire_expr = self._parse_inquire_expr()
        self._expect_line_end()
        return BeliefDecl(name=name, inquire_expr=inquire_expr, span=span)

    def _parse_inquire_expr(self) -> InquireExpr:
        """inquire { prompt: "...", agents: [...], ttl: N }"""
        self._expect(TokenKind.INQUIRE, "Expected 'inquire'")
        self._expect(TokenKind.LBRACE, "Expected '{' after 'inquire'")
        self._skip_newlines()
        prompt = ""
        agents: list[str] = []
        ttl: float | None = None
        while not self._check(TokenKind.RBRACE) and not self._check(TokenKind.EOF):
            self._skip_newlines()
            if self._check(TokenKind.RBRACE):
                break
            key_tok = self._advance()
            key = key_tok.value
            self._expect(TokenKind.COLON, f"Expected ':' after '{key}'")
            if key == "prompt":
                prompt = self._expect(TokenKind.STRING_LIT, "Expected prompt string").value
            elif key == "agents":
                self._expect(TokenKind.LBRACKET, "Expected '[' for agents list")
                while not self._check(TokenKind.RBRACKET) and not self._check(TokenKind.EOF):
                    agents.append(self._advance().value)
                    self._match(TokenKind.COMMA)
                self._expect(TokenKind.RBRACKET, "Expected ']' after agents")
            elif key == "ttl":
                tok = self._advance()
                ttl = float(tok.value)
            self._match(TokenKind.COMMA)
            self._skip_newlines()
        self._expect(TokenKind.RBRACE, "Expected '}' to close inquire block")
        return InquireExpr(prompt=prompt, agents=agents, ttl=ttl)

    def _parse_resolve(self) -> ResolveStmt:
        """resolve <name> with consensus { threshold: 0.8, strategy: agreement }"""
        self._expect(TokenKind.RESOLVE)
        target = self._expect(TokenKind.IDENT, "Expected belief name").value
        self._expect(TokenKind.WITH, "Expected 'with' after belief name")
        self._advance()  # consume 'consensus' identifier
        threshold = 0.8
        strategy = "agreement"
        if self._check(TokenKind.LBRACE):
            self._advance()
            self._skip_newlines()
            while not self._check(TokenKind.RBRACE) and not self._check(TokenKind.EOF):
                self._skip_newlines()
                if self._check(TokenKind.RBRACE):
                    break
                key = self._advance().value
                self._expect(TokenKind.COLON)
                if key == "threshold":
                    threshold = float(self._advance().value)
                elif key == "strategy":
                    strategy = self._advance().value
                self._match(TokenKind.COMMA)
                self._skip_newlines()
            self._expect(TokenKind.RBRACE, "Expected '}' to close resolve block")
        self._expect_line_end()
        return ResolveStmt(target=target, threshold=threshold, strategy=strategy)

    def _parse_guard(self) -> GuardStmt:
        """guard <name> against hallucination { max_risk: 0.2, strategy: both, max_variance: 0.01 }"""
        self._expect(TokenKind.GUARD)
        target = self._expect(TokenKind.IDENT, "Expected belief name").value
        self._expect(TokenKind.AGAINST, "Expected 'against' after belief name")
        self._advance()  # consume 'hallucination' identifier
        max_risk = 0.2
        strategy = "both"
        max_variance: float | None = None
        strict = False
        if self._check(TokenKind.LBRACE):
            self._advance()
            self._skip_newlines()
            while not self._check(TokenKind.RBRACE) and not self._check(TokenKind.EOF):
                self._skip_newlines()
                if self._check(TokenKind.RBRACE):
                    break
                key = self._advance().value
                self._expect(TokenKind.COLON)
                if key == "max_risk":
                    max_risk = float(self._advance().value)
                elif key == "strategy":
                    strategy = self._advance().value
                elif key == "max_variance":
                    max_variance = float(self._advance().value)
                elif key == "strict":
                    strict = self._advance().value == "true"
                self._match(TokenKind.COMMA)
                self._skip_newlines()
            self._expect(TokenKind.RBRACE, "Expected '}' to close guard block")
        self._expect_line_end()
        return GuardStmt(target=target, max_risk=max_risk, strategy=strategy,
                         max_variance=max_variance, strict=strict)

    def _parse_evolve(self) -> EvolveStmt:
        """evolve <name> until stable { max_iter: 3 }"""
        self._expect(TokenKind.EVOLVE)
        target = self._expect(TokenKind.IDENT, "Expected belief name").value
        self._expect(TokenKind.UNTIL, "Expected 'until' after belief name")
        condition = self._advance().value  # e.g. 'stable'
        max_iter = 3
        if self._check(TokenKind.LBRACE):
            self._advance()
            self._skip_newlines()
            while not self._check(TokenKind.RBRACE) and not self._check(TokenKind.EOF):
                self._skip_newlines()
                if self._check(TokenKind.RBRACE):
                    break
                key = self._advance().value
                self._expect(TokenKind.COLON)
                if key == "max_iter":
                    max_iter = int(self._advance().value)
                self._match(TokenKind.COMMA)
                self._skip_newlines()
            self._expect(TokenKind.RBRACE, "Expected '}' to close evolve block")
        self._expect_line_end()
        return EvolveStmt(target=target, condition=condition, max_iter=max_iter)

    def _parse_symbol_decl(self) -> SymbolDecl:
        """symbol <name> { ... }"""
        self._expect(TokenKind.SYMBOL)
        name = self._expect(TokenKind.IDENT, "Expected symbol name").value
        self._expect(TokenKind.LBRACE, "Expected '{' after symbol name")
        self._expect_line_end()
        body: list[Statement] = []
        while not self._check(TokenKind.RBRACE) and not self._check(TokenKind.EOF):
            self._skip_newlines()
            if self._check(TokenKind.RBRACE):
                break
            body.append(self._parse_statement())
            self._skip_newlines()
        self._expect(TokenKind.RBRACE, "Expected '}' to close symbol block")
        self._expect_line_end()
        return SymbolDecl(name=name, body=body)

    # ------------------------------------------------------------------
    # ML constructs
    # ------------------------------------------------------------------
